# 3d-mesh-doctor

./: .gitignore  AGENTS.md  LICENSE  README.md  generate_examples.py  instructions.md  pyproject.toml  requirements.txt
scans/: bumpy_sphere.stl  cube_inverted_normals.stl  ear_canal.stl  overlapping_cubes.stl  sphere_with_holes.stl  torus_high_poly.stl
src/: __init__.py  cli.py  main.py
src/batch/: __init__.py  processor.py
src/core/: __init__.py  mesh_analyzer.py  mesh_exporter.py  mesh_loader.py  mesh_metrics.py  mesh_reducer.py  mesh_repairer.py  mesh_smoother.py
src/gui/: __init__.py  export_panel.py  file_panel.py  main_window.py  progress_dialog.py  reduction_panel.py  repair_panel.py  smoothing_panel.py  viewer_widget.py
tests/: conftest.py  test_mesh_analyzer.py  test_mesh_exporter.py  test_mesh_loader.py  test_mesh_reducer.py  test_mesh_repairer.py  test_mesh_smoother.py
