[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "3d-mesh-doctor"
version = "0.1.0"
description = "Python GUI tool for repairing, smoothing, and optimizing 3D scans for printing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ilkka Huhtakallio" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "pyside6>=6.5",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",
    "trimesh[easy]>=4.0",
    "fast-simplification>=0.1",
    "scipy>=1.11",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
mesh-doctor = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
